[FIX] board: fix graphs height
Issue

	- Install Projects, Dashboard
	- Project > All tasks > Graph view
	- Add to dashboard
	- Refresh & go to dashboard

	The graph is small and it's
	hard to read it

Cause

	We have no min-height & chartJS computes
	a height which is too small

	Already fixed in previous versions with
	9214d7815267d but now the class `o_graph_svg_container`
	seems to be used nowhere

Solution

	Change the class name & adjust height a bit

OPW-2303224

closes odoo/odoo#55211

X-original-commit: 80a46b9249bd6dada4d462cd7a11a406eb1ceba5

--- a/addons/board/static/src/scss/dashboard.scss
+++ b/addons/board/static/src/scss/dashboard.scss
@@ -123,8 +123,8 @@
             }
 
             // Override height of graph. min-height doesn't do the trick
-            .o_graph_svg_container {
-                height: 250px;
+            .o_graph_controller canvas {
+                height: 300px;
             }
 
             // Override height for calendar view to be displayed properly
